<resources>
    <string name="table1">Table 1</string>
    <string name="table2">Table 2</string>
    <string name="table3">Table 3</string>
    <string name="table4">Table 4</string>
    <string name="table5">Table 5</string>
    <string name="table6">Table 6</string>
    <string name="table7">Table 7</string>
    <string name="table8">Table 8</string>
    <string name="table9">Table 9</string>
    <string name="table10">Table 10</string>
    <string name="table11">Table11</string>
    <string name="table12">Table 12</string>
    <string name="table13">Table 13</string>
    <string name="table14">Table14</string>
    <string name="table15">Table 15</string>
    <string name="table16">Table 16</string>
    <string name="table17">Table 17</string>
    <string name="table18">Table 18</string>
    <string name="table19">Table 19</string>
    <string name="table20">Table 20</string>
    <string name="table21">Table 21</string>
    <string name="table22">Table 22</string>
    <string name="table23">Table 23</string>
    <string name="table24">Table 24</string>
    <string name="table25">Table 25</string>
    <string name="table26">Table 26</string>
    <string name="table27">Table 27</string>
    <string name="table28">Table 28</string>
    <string name="table29">Table 29</string>
    <string name="table30">Table 30</string>
    <string name="reservation_title">Reservations</string>
    <string name="add_reservation_button">Tap to add a reservation</string>
    <string name="time_title">Time</string>
    <string name="guest_title">Guests</string>
    <string name="table_title">Table</string>
    <string name="mobile_number_title">Mobile Number</string>
    <string name="select_date">Select Date</string>
    <string name="order_drink_button_text">Order Drinks</string>
    <string name="ready_to_submit_button">Ready to Submit Order</string>
    <string name="help_button_text">Help</string>
    <string name="other_order_button_text">Order Other</string>
    <string name="app_name">Takii Table Reservation System</string>
    <string name="name_field">Name</string>
    <string name="adult_field">Adult Guests</string>
    <string name="children_field">Child Guests</string>

    <string-array name="table_Numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>
    <string name="table_layout_title">Restaurant Layout</string>
    <string name="search_hint">Enter Search Text Here</string>
    <string-array name="hours">
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
    </string-array>
    <string-array name="minutes">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>
    <string name="cancel_text">Cancel</string>
    <string name="reserve_text">Reserve</string>
    <string name="date_title">Date</string>
    <string name="add_reservation_title">Add Reservation</string>
    <string name="select_time">Select Time</string>
    <string name="dk_phone" translatable="false">0123456789</string>
</resources>
