<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wood_floor"
    tools:context=".WaiterMainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/mobile_stationary_assets"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mobile_table_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginLeft="21dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/table4"
                android:focusable="true"
                app:srcCompat="@drawable/mobile_table_4" />

            <ImageView
                android:id="@+id/mobile_table_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="66dp"
                android:layout_marginLeft="66dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/table7"
                android:focusable="true"
                app:srcCompat="@drawable/mobile_table_window" />

            <ImageView
                android:id="@+id/mobile_table_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/table8"
                android:focusable="true"
                app:srcCompat="@drawable/mobile_table_window" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mobile_table_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="26dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/table3"
                android:focusable="true"
                app:srcCompat="@drawable/mobile_table_small" />

            <ImageView
                android:id="@+id/mobile_table_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="58dp"
                android:layout_marginLeft="58dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/table5"
                android:focusable="true"
                app:srcCompat="@drawable/mobile_table_small" />

            <ImageView
                android:id="@+id/mobile_table_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginLeft="21dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/table6"
                android:focusable="true"
                app:srcCompat="@drawable/mobile_table_small" />

            <ImageView
                android:id="@+id/mobile_table_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="21dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/table10"
                android:focusable="true"
                app:srcCompat="@drawable/mobile_table_small" />

            <ImageView
                android:id="@+id/mobile_table_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="21dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/table12"
                android:focusable="true"
                app:srcCompat="@drawable/mobile_table_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mobile_table_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/table2"
                android:focusable="true"
                app:srcCompat="@drawable/mobile_table" />

            <ImageView
                android:id="@+id/mobile_table_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginLeft="130dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/table9"
                android:focusable="true"
                app:srcCompat="@drawable/mobile_table_small" />

            <ImageView
                android:id="@+id/mobile_table_11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginLeft="35dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/table11"
                android:focusable="true"
                app:srcCompat="@drawable/mobile_table_small" />

            <ImageView
                android:id="@+id/mobile_table_13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="18dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/table13"
                android:focusable="true"
                app:srcCompat="@drawable/mobile_table" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mobile_table_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/table1"
                android:focusable="true"
                app:srcCompat="@drawable/mobile_table" />

            <ImageView
                android:id="@+id/mobile_table_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="240dp"
                android:layout_marginLeft="240dp"
                android:layout_marginTop="34dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/table14"
                android:focusable="true"
                app:srcCompat="@drawable/mobile_table" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mobile_table_15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="300dp"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="34dp"
                android:layout_weight="1"
                android:contentDescription="@string/table15"
                app:srcCompat="@drawable/mobile_table" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mobile_table_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="194dp"
                android:layout_marginLeft="194dp"
                android:layout_marginTop="48dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/table20"
                android:focusable="true"
                app:srcCompat="@drawable/mobile_table" />

            <ImageView
                android:id="@+id/mobile_table_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="67dp"
                android:layout_marginLeft="67dp"
                android:layout_marginTop="39dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/table16"
                android:focusable="true"
                app:srcCompat="@drawable/mobile_table_small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mobile_table_21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="194dp"
                android:layout_marginLeft="194dp"
                android:layout_marginTop="33dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/table21"
                android:focusable="true"
                app:srcCompat="@drawable/mobile_table" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/mobile_table_17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="67dp"
                    android:layout_marginLeft="67dp"
                    android:layout_marginTop="5dp"
                    android:clickable="true"
                    android:contentDescription="@string/table17"
                    android:focusable="true"
                    app:srcCompat="@drawable/mobile_table_small" />

                <ImageView
                    android:id="@+id/mobile_table_18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="67dp"
                    android:layout_marginLeft="67dp"
                    android:layout_marginTop="15dp"
                    android:clickable="true"
                    android:contentDescription="@string/table18"
                    android:focusable="true"
                    app:srcCompat="@drawable/mobile_table_small" />

                <ImageView
                    android:id="@+id/mobile_table_19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:clickable="true"
                    android:contentDescription="@string/table19"
                    android:focusable="true"
                    app:srcCompat="@drawable/mobile_table" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mobile_table_26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="193dp"
                android:layout_marginLeft="193dp"
                android:layout_marginTop="49dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/table26"
                android:focusable="true"
                app:srcCompat="@drawable/mobile_table_small" />

            <ImageView
                android:id="@+id/mobile_table_29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="49dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/table29"
                android:focusable="true"
                app:srcCompat="@drawable/mobile_table_small" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="74dp"
                android:layout_marginLeft="74dp"
                android:layout_marginTop="34dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/mobile_table_22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:contentDescription="@string/table22"
                    android:focusable="true"
                    app:srcCompat="@drawable/mobile_table_small" />

                <ImageView
                    android:id="@+id/mobile_table_23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:clickable="true"
                    android:contentDescription="@string/table23"
                    android:focusable="true"
                    app:srcCompat="@drawable/mobile_table_small" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/mobile_table_27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="192dp"
                android:layout_marginLeft="192dp"
                android:layout_marginTop="14dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/table27"
                android:focusable="true"
                app:srcCompat="@drawable/mobile_table_27" />

            <ImageView
                android:id="@+id/mobile_table_30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="14dp"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/table30"
                android:focusable="true"
                app:srcCompat="@drawable/mobile_table_small" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="47dp"
                android:layout_marginLeft="47dp"
                android:layout_marginTop="14dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/mobile_table_24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:contentDescription="@string/table24"
                    android:focusable="true"
                    app:srcCompat="@drawable/mobile_table_small" />

                <ImageView
                    android:id="@+id/mobile_table_25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:clickable="true"
                    android:contentDescription="@string/table25"
                    android:focusable="true"
                    app:srcCompat="@drawable/mobile_table_small" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/mobile_table_28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="221dp"
            android:layout_marginLeft="221dp"
            android:clickable="true"
            android:contentDescription="@string/table28"
            android:focusable="true"
            app:srcCompat="@drawable/mobile_table_28" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>